# agentsTG

./: .dockerignore  .env.example  .flake8  .gitignore  .markdownlint.yaml  AGENTS.md  AI_INSTRUCTIONS.md  CLINE_PROMPT.md  Dockerfile  FULL_CONTINUATION_PROMPT.md  PROGRESS.md  PROJECT_PROMPT.md  PROJECT_STATE.json  README.md  ROADMAP.md  alembic.ini  fly.toml  package-lock.json  package.json  pyproject.toml  qwen to cursor.md  render.yaml
.cursor/: README.md  hooks.json  permissions.json
deploy/: FIRSTBYTE_VPS.md  HEARTBEAT.default.md  NEON_SETUP.md  NOTES_CHANNEL.md  OLLAMA_VPS.md  TIMWEB_VPS_GUIDE.md  agents-tg.service  timeweb-vps-setup.sh
docs/: AGENT_BEHAVIOR.md  AGENT_PERSONALITIES.md  AGENT_PIPELINE.md  AGENT_RUNTIME.md  CURSOR_SETUP.md  DEV_AGENT_ERGONOMICS.md  E2E_AUTONOMY.md  E2E_EXPLAINED.md  E2E_SIGNOFF_TEMPLATE.md  E2E_TELEGRAM_CHECKLIST.md  EVAL_HARNESS.md  FIRECRACKER_SPIKE.md  INTEGRATIONS.md  JOURNAL_30_DAY.md  METRICS.md  MVP_GAP_AUDIT.md  OPENCLAW_PARITY.md  OPENCLAW_SIDECAR_EVAL.md  PHASE_B_INTEGRATIONS_SMOKE.md  PLAN_LLM_OPENCLAW_E2E.md  PROJECT_VERIFICATION.md  PROMPT_SNIPPET.md  RESOURCE_AND_LLM.md  RESOURCE_GUARDRAILS.md  ROADMAP_MVP.md  TASK_TEMPLATE.md  VERIFICATION_TEMPLATE.md  VPS_E2E_RUNBOOK.md  WEB_APPS.md  implementation-notes.TEMPLATE.md  implementation-notes.md  last_pytest_run.txt  last_vps_e2e_automated.txt  last_vps_public_smoke.txt
scripts/: _fetch_vps_logs.py  agent_status.py  committer.ps1  docs_list.py  install-cursor-extensions.ps1  neon_provision.py  ship.ps1  smoke_prod_public.py  validate_cursor_artifacts.py  vps_configure_neon.py  vps_configure_prod.py  vps_deploy.py  vps_logs.py
src/: main.py
tests/: test_agent_delivery_profile.py  test_agent_models.py  test_agent_outer_loop_replan.py  test_agent_runner.py  test_agent_runtime.py  test_agent_wake.py  test_arch_layer_boundaries.py  test_artifact_service.py  test_bootstrap_context.py  test_browser_tools.py  test_capability_templates.py  test_chat_history.py  test_coalesce.py  test_confirmation_delivery.py  test_confirmation_replay.py  test_confirmation_service.py  test_delegation_envelope.py  test_envelope_dispatch.py  test_environment_context.py  (+45 more)
(+205 files in other folders)
