[project]
name = "agents-tg"
version = "0.1.0"
description = "AI Agents Telegram Assistant - мультиагентная система для Telegram"
authors = [
    {name = "AI Assistant"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.0.0",
    "asyncpg>=0.29.0",
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "mem0ai>=0.0.1",
    "openai>=1.0.0",
    "duckduckgo-search>=6.3.0",
    "trafilatura>=1.12.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0", "setuptools>=75.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.1.0,<8.0.0"
black = ">=26.5.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
flake8 = ">=7.3.0,<8.0.0"
mypy = ">=2.1.0,<3.0.0"
ruff = ">=0.11.0,<1.0.0"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "unit: unit test",
    "integration: integration test",
    "slow: slow test",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]